syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.TestContract.BasicSecurity";

service BasicSecurityContract {
    option (aelf.csharp_state) = "AElf.Contracts.TestContract.BasicSecurity.BasicSecurityContractState";
    //Actions
    rpc InitialBasicSecurityContract(aelf.Address) returns (google.protobuf.Empty) {
    }
    rpc TestBoolState(BoolInput) returns (google.protobuf.Empty) {
    }
    rpc TestInt32State(Int32Input) returns (google.protobuf.Empty) {
    }
    rpc TestUInt32State(UInt32Input) returns (google.protobuf.Empty) {
    }
    rpc TestInt64State(Int64Input) returns (google.protobuf.Empty) {
    }
    rpc TestUInt64State(UInt64Input) returns (google.protobuf.Empty) {
    }
    rpc TestStringState(StringInput) returns (google.protobuf.Empty) {
    }
    rpc TestBytesState(BytesInput) returns (google.protobuf.Empty) {
    }
    rpc TestProtobufState(ProtobufInput) returns (google.protobuf.Empty) {
    }
    rpc TestComplex1State(Complex1Input) returns (google.protobuf.Empty) {
    }
    rpc TestComplex2State(Complex2Input) returns (google.protobuf.Empty) {
    }
    rpc TestMapped1State(ProtobufInput) returns (google.protobuf.Empty) {
    }
    rpc TestMapped2State(Complex3Input) returns (google.protobuf.Empty) {
    }
    rpc TestExecuteExternalMethod(Int64Input) returns (google.protobuf.Empty) {
    }
    rpc TestOriginAddress(aelf.Address) returns (google.protobuf.Empty) {
    }
    
    //View
    rpc QueryBoolState(google.protobuf.Empty) returns (BoolOutput) {
    }
    rpc QueryInt32State(google.protobuf.Empty) returns (Int32Output){
    }
    rpc QueryUInt32State(google.protobuf.Empty) returns (UInt32Output) {
    }
    rpc QueryInt64State(google.protobuf.Empty) returns (Int64Output) {
    }
    rpc QueryUInt64State(google.protobuf.Empty) returns (UInt64Output) {
    }
    rpc QueryStringState(google.protobuf.Empty) returns (StringOutput) {
    }
    rpc QueryBytesState(google.protobuf.Empty) returns (BytesOutput) {
    }
    rpc QueryProtobufState(google.protobuf.Empty) returns (ProtobufOutput) {
    }
    rpc QueryComplex1State(google.protobuf.Empty) returns (Complex1Output) {
    }
    rpc QueryComplex2State(google.protobuf.Empty) returns (Complex2Output) {
    }
    rpc QueryMappedState1(ProtobufInput) returns (ProtobufMessage) {
    }
    rpc QueryMappedState2(Complex3Input) returns (TradeMessage) {
    }
    rpc QueryExternalMethod1(aelf.Address) returns (Int64Output) {
    }
    rpc QueryExternalMethod2(aelf.Address) returns (Int64Output) {
    }
}

//Input
message BoolInput {
    bool bool_value = 1;
}

message Int32Input {
    int32 int32_value = 1;
}

message UInt32Input {
    uint32 u_int32_value = 1;
}

message Int64Input {
    int64 int64_value = 1;
}

message UInt64Input {
    uint64 u_int64_value = 1;
}

message StringInput {
    string string_value = 1;
}

message BytesInput {
    bytes bytes_value = 1;
}

message ProtobufInput {
    ProtobufMessage protobuf_value = 1;
}

message Complex1Input {
    bool bool_value = 1;
    int32 int32_value = 2;
}

message Complex2Input {
    BoolInput bool_data = 1;
    Int32Input int32_data = 2;
}

message Complex3Input {
    string from = 1;
    string pair_a = 2;
    string to = 3;
    string pair_b = 4;
    TradeMessage trade_details = 5;
}

message TradeMessage {
    int64 from_amount = 1;
    int64 to_amount = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message ProtobufMessage {
    string string_value = 1;
    bool bool_value = 2;
    int64 int64_value = 3;
}

//Output
message BoolOutput {
    bool bool_value = 1;
}

message Int32Output {
    int32 int32_value = 1;
}

message UInt32Output {
    uint32 u_int32_value = 1;
}

message UInt64Output {
    uint64 u_int64_value = 1;
}

message Int64Output {
    int64 int64_value = 1;
}

message StringOutput {
    string string_value = 1;
}

message BytesOutput {
    bytes bytes_value = 1;
}

message ProtobufOutput {
    ProtobufMessage protobuf_value = 1;
}

message ProtobufListOutput {
    repeated ProtobufMessage collection = 1;
}

message Complex1Output {
    bool bool_value = 1;
    int32 int32_value = 2;
}

message Complex2Output {
    BoolOutput bool_data = 1;
    Int32Output int32_data = 2;
}